# GDExtensionTemplateZh

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
src/: GDExtensionTemplate.cpp  RegisterExtension.cpp  Version.h.in
templates/: CMakeLists.txt
